# goa-browser-extension

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
chromium-extension/: Makefile.am  background.html  background.js  content.facebook.js  content.gmail.js  content.google.calendar.js  content.google.common.js  content.google.gdrive.js  content.google.gmail.js  content.google.picasaweb.js  content.google.plus.js  crxmake.sh  infobar.html  infobar.js  manifest.json.in  popup.html  popup.js
lib/: Makefile.am  goabrowser.c  goabrowser.h  json-gvariant.c  json-gvariant.h
npapi-plugin/: Makefile.am  object.c  object.h  plugin.c  plugin.h
po/: POTFILES.in
